--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -27,7 +27,7 @@
            <div>
            <input  #input matInput  class="input" autocomplete="off"
                   [formControlName]="question.key" [id]="question.key"
-                  placeholder="Write details here" value= {{value}}
+                  placeholder="Details" value= {{value}}
                    (focusout) = "onInputFocusOut($event, question.key)">
            </div>
              <div>
