--- a/src/app/map/dialog-rating-measure-dialog.html
+++ b/src/app/map/dialog-rating-measure-dialog.html
@@ -21,7 +21,7 @@
         <div class = "container">
           <div>
             <input  matInput class="input" [formControlName]="'sonstiges'" [id]="'sonstiges'" autocomplete="off"
-                   placeholder="Write description here">
+                   placeholder="Beschreibung">
           </div>
         </div>
       </mat-form-field>
