--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -9,25 +9,25 @@
   </mat-card-title-group> -->
   <mat-divider class = "toolbarDivider"></mat-divider>  <!-- to provide a space to drag -->
   <mat-toolbar color="primary">
-    <button matTooltip="Zoom to the study area" aria-labelledby="Zoom to the study area" mat-icon-button (click)="zoomHome()">
+    <button matTooltip="Gesamtgebiet zeigen" aria-labelledby="Zoom to the study area" mat-icon-button (click)="zoomHome()">
       <mat-icon>home</mat-icon>
     </button>
-    <button mat-icon-button aria-labelledby="Show list of layers" matTooltip="Show list of layers" (click)="openLayerPanel()" >
+    <button mat-icon-button aria-labelledby="Show list of layers" matTooltip="Zeige Kartenuebersicht" (click)="openLayerPanel()" >
       <mat-icon class="svgIconToolbar">layers</mat-icon>
     </button>
     <!--<button mat-icon-button aria-labelledby="Edit layers" matTooltip="Edit layers" (click)="layerEditingChange()">
       <mat-icon>edit</mat-icon>
     </button> !-->
-    <button mat-icon-button aria-labelledby="Add a sketch layer" matTooltip="Add a sketch layer" (click)="createScratchLayer()" >
+    <button mat-icon-button aria-labelledby="Add a sketch layer" matTooltip="Einen Sketch layer hinzufuegen" (click)="createScratchLayer()" >
     <mat-icon class="svgIconToolbar" svgIcon="layerScratch"></mat-icon>
     </button>
    <!-- <button mat-icon-button (click)="startAction('Identify')"  aria-label="identify" matTooltip="Identify element">
       <mat-icon svgIcon="identify"></mat-icon>
     </button> -->
-    <button mat-icon-button (click)="findExposedPeople()"  aria-label="identify" matTooltip="Find exposed people to noise levels">
+    <button mat-icon-button (click)="findExposedPeople()"  aria-label="identify" matTooltip="Von Laerm betroffene Bevoelkerung ermitteln">
       <mat-icon class="svgIconToolbar" svgIcon="noiseAnnoyance"></mat-icon>
     </button>
-    <button mat-icon-button (click)="findExposedInstitutions()"  aria-label="identify" matTooltip="Find exposed institutions to noise levels">
+    <button mat-icon-button (click)="findExposedInstitutions()"  aria-label="identify" matTooltip="Von Laerm betroffene Einrichtungen ermitteln">
       <mat-icon class="svgIconToolbar" svgIcon="noiseOrgAnnoyance"></mat-icon>
     </button>
 
