--- a/src/app/layer-panel/layer-panel.component.html
+++ b/src/app/layer-panel/layer-panel.component.html
@@ -76,7 +76,7 @@
                     <img class = iconLegend [src] = icon.iconSrc alt="legend">
                   </div>
                   <div class="iconTitle">
-                    {{icon.title | titlecase}}
+                    {{icon.title | titlecase}}   // #TODO remove to 
                   </div>
                 </div>
               </mat-list>
