start dutch translation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,11 +15,11 @@
       </button> -->
       <button mat-menu-item disabled (click) = "editSettings()">
         <mat-icon>settings </mat-icon>
-        <span>Settings</span>
+        <span>Instellingen</span>
       </button>
       <button mat-menu-item (click)="showInfo()">
         <mat-icon>info </mat-icon>
-        <span>About</span>
+        <span>Over</span>
       </button>
      </mat-menu>
      <span class="title">&nbsp;OGITO </span>
@@ -28,7 +28,7 @@
      <code>{{ profile["nickname"] }}</code>
      </span> <pre>  </pre>
      <button mat-button (click)="auth.login()" *ngIf="!auth.loggedIn"> Log In</button>
-     <button mat-button (click)="auth.logout()" *ngIf="auth.loggedIn"> Log Out</button>
+     <button mat-button (click)="auth.logout()" *ngIf="auth.loggedIn"> Log uit</button>
      <button mat-icon-button (click)="exitToApp()">
         <mat-icon> exit_to_app</mat-icon>
      </button>
