--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -12,6 +12,9 @@
     <button matTooltip="Toon totale oppervlakte" aria-labelledby="Zoom to the study area" mat-icon-button (click)="zoomHome()">
       <mat-icon>home</mat-icon>
     </button>
+    <button mat-icon-button aria-labelledby="Add a sketch layer" matTooltip="Omschakelen van volledig scherm" (click)="toggleFullScreen()" >
+      <mat-icon class="svgIconToolbar" svgIcon="layerScratch"></mat-icon>
+    </button>
     <button mat-icon-button aria-labelledby="Show list of layers" matTooltip="Toon kaartoverzicht" (click)="openLayerPanel()" >
       <mat-icon class="svgIconToolbar">layers</mat-icon>
     </button>
