improve dutch translation

--- a/src/app/symbol-list/symbol-list.component.html
+++ b/src/app/symbol-list/symbol-list.component.html
@@ -5,7 +5,7 @@
   <mat-card-title-group>
     <mat-card-title class="panelTitle">Symbole</mat-card-title>
     <button mat-flat-button (click)="showSymbolList(false)" >
-      <mat-icon class="matCloseWrapper" matTooltip="Close Symbol Panel">close</mat-icon>
+      <mat-icon class="matCloseWrapper" matTooltip="sluiten">close</mat-icon>
     </button>
 
   </mat-card-title-group>
