--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -57,6 +57,20 @@ footer a {
   // border-style: solid;
   z-index:100;
 }
+
+.app-content-container:fullscreen{
+  width: 100%;
+  height: 100%;
+  background-color: whitesmoke;
+}
+
+.app-content-container:-webkit-full-screen{
+  width: 100%;
+  height: 100%;
+  background-color: whitesmoke;
+}
+
+
 @media screen and (min-width: 900px) {
   .mat-toolbar {
     background-color: #78002e; // primary dark color only for test removed later to keep the primary color
