--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -13,7 +13,10 @@
       <mat-icon>home</mat-icon>
     </button>
     <button mat-icon-button aria-labelledby="Add a sketch layer" matTooltip="Omschakelen van volledig scherm" (click)="toggleFullScreen()" >
-      <mat-icon class="svgIconToolbar" svgIcon="layerScratch"></mat-icon>
+      <mat-icon class="svgIconToolbar" svgIcon="fullscreen"></mat-icon>
+    </button>
+    <button mat-icon-button aria-labelledby="Add a sketch layer" matTooltip="Schermoriëntatie veranderen" (click)="switchScreenOrientation()" >
+      <mat-icon class="svgIconToolbar" svgIcon="fullscreen"></mat-icon>
     </button>
     <button mat-icon-button aria-labelledby="Show list of layers" matTooltip="Toon kaartoverzicht" (click)="openLayerPanel()" >
       <mat-icon class="svgIconToolbar">layers</mat-icon>
