--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -5,7 +5,7 @@
      cdkDragBoundary=".parent">
  <mat-card>
       <mat-card-title-group>
-        <mat-card-title>Beschreibung</mat-card-title>
+        <mat-card-title>Beschrijving</mat-card-title>
         <!--<button mat-flat-button (click)="closeForm()" class="matCloseWrapper">
           <mat-icon >close</mat-icon>
         </button> -->
