--- a/src/app/symbol-list/symbol-list.component.html
+++ b/src/app/symbol-list/symbol-list.component.html
@@ -3,7 +3,7 @@
      cdkDragBoundary=".app-content" >
 <mat-card class="symbol-list"  #symListCard>
   <mat-card-title-group>
-    <mat-card-title class="panelTitle">Symbole</mat-card-title>
+    <mat-card-title class="panelTitle">Symbolen</mat-card-title>
     <button mat-flat-button (click)="showSymbolList(false)" >
       <mat-icon class="matCloseWrapper" matTooltip="sluiten">close</mat-icon>
     </button>
