--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -27,7 +27,10 @@
     <button mat-icon-button aria-labelledby="Add a sketch layer" matTooltip="Een schetslaag toevoegen" (click)="createScratchLayer()" >
     <mat-icon class="svgIconToolbar" svgIcon="layerScratch"></mat-icon>
     </button>
-   <!-- disable noise related queries for Herne Case Study
+    <button mat-icon-button aria-labelledby="Open Street Search" matTooltip="Zoeken op straatnaam" (click)="openStreetSearch()" >
+      <mat-icon class="svgIconToolbar" svgIcon="layerScratch"></mat-icon>
+    </button>
+   <!-- disable noise related queries for Herne and Zwolle Case Study
     <button mat-icon-button (click)="startAction('Identify')"  aria-label="identify" matTooltip="Identify element">
       <mat-icon svgIcon="identify"></mat-icon>
     </button> -->
