--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -28,7 +28,7 @@
     <mat-icon class="svgIconToolbar" svgIcon="layerScratch"></mat-icon>
     </button>
     <button mat-icon-button aria-labelledby="Open Street Search" matTooltip="Zoeken op straatnaam" (click)="openStreetSearch()" >
-      <mat-icon class="svgIconToolbar" svgIcon="layerScratch"></mat-icon>
+      <mat-icon class="svgIconToolbar" svgIcon="magnifier"></mat-icon>
     </button>
    <!-- disable noise related queries for Herne and Zwolle Case Study
     <button mat-icon-button (click)="startAction('Identify')"  aria-label="identify" matTooltip="Identify element">
